loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: '(' expected but identifier found.
while ! (isFacingWall();) {forward();} 
      ^LoopWhile:3: error: illegal start of simple expression
	}
        ^